--- a/templates/diagnosis-translation.html
+++ b/templates/diagnosis-translation.html
@@ -213,7 +213,7 @@
               <ul class="list-items">
                 <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
                   <label>
-                    <input type="radio" ng-model="diagnosisTranslation.eduMat" ng-change="eduMatUpdate()" ng-checked="diagnosisTranslation.eduMat.serial == eduMat.serial" ng-value="eduMat" /> {{eduMat.name_EN}}
+                    <input type="radio" ng-model="diagnosisTranslation.eduMatSer" ng-change="eduMatUpdate()" ng-checked="diagnosisTranslation.eduMatSer == eduMat.serial" ng-value="eduMat.serial" /> {{eduMat.name_EN}}
                   </label>
                 </li>
               </ul>
