--- a/templates/educational-material-add.html
+++ b/templates/educational-material-add.html
@@ -1077,6 +1077,7 @@
           </div>
         </div>
       </div>
+      <div class="bannerMessage alert-success">{{bannerMessage}}</div>
     </div>
     
 <!-- "Processing" modal template -->
