--- a/templates/educational-material.html
+++ b/templates/educational-material.html
@@ -93,6 +93,7 @@
         </h2>
       </div>
       <div class="modal-body">
+        <div class="bannerMessageModal alert-success">{{bannerMessageModal}}</div>
         <uib-accordion>
           <!-- SECTION: Titles -->
           <div uib-accordion-group is-open="statusTitle.open">
