--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -243,9 +243,9 @@
               To change the additional link(s), modify the text field(s) below.    
             </div>
             <div class="row" ng-repeat="link in testResult.additional_links" style="margin-bottom:7px; border-bottom:1px solid #ddd;">
-              <h2 style="margin:0 0 7px 0; padding:0 15px; font-size:30px;">
-              <span style="float:right; cursor:pointer;" ng-click="removeAdditionalLink($index)"><span class="glyphicon glyphicon-remove"></span></span>
-              </h2>
+              <div class="col-md-12" style="margin:0 0 7px 0; padding:0 15px; font-size:30px;">
+                <span style="float:right; cursor:pointer;" ng-click="removeAdditionalLink($index)"><span class="glyphicon glyphicon-remove"></span></span>
+              </div>
               <div class="col-md-6">
                 <div class="input-group" style="margin-bottom: 7px;">
                   <span class="input-group-addon">Title EN</span>
