--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -226,7 +226,7 @@
               <ul class="list-items">
                 <li ng-repeat="eduMat in eduMatList | filter: searchEduMatsFilter">
                   <label>
-                    <input type="radio" ng-model="testResult.eduMatSer" ng-change="eduMatUpdate()" ng-checked="testResult.eduMatSer == eduMat.serial" ng-value="eduMat.serial" /> {{eduMat.name_EN}}
+                    <input type="radio" ng-model="testResult.eduMatSer" ng-change="eduMatUpdate(eduMat)" ng-checked="testResult.eduMatSer == eduMat.serial" ng-value="eduMat.serial" /> {{eduMat.name_EN}}
                   </label>
                 </li>
               </ul>
