--- Fixed typo in side menu     --- Fixed breadcrumb linking to the wrong pages

--- a/templates/alias-add.html
+++ b/templates/alias-add.html
@@ -213,9 +213,9 @@
 							<!-- Breadcrumbs -->
               <div class="col-md-3 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span>
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/alias">TAD</a></span>
+                  <span><a ui-sref="alias">TAD</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
                   <span><strong>Add TAD</strong></span>
                 </span>
