--- a/templates/diagnosis-translation-add.html
+++ b/templates/diagnosis-translation-add.html
@@ -167,11 +167,11 @@
 						<div class="col-md-4 title-breadcrumbs">
 							<span>
 								<span>
-									<a href="#/">Home</a>
+									<a ui-sref="home">Home</a>
 								</span>
 								<span class="teflon glyphicon glyphicon-menu-right"></span>
 								<span>
-									<a href="#/diagnosis-translation">Diagnosis Translations</a>
+									<a ui-sref="diagnosis-translation">Diagnosis Translations</a>
 								</span>
 								<span class="teflon glyphicon glyphicon-menu-right"></span>
 								<span>
