--- a/templates/educational-material-add.html
+++ b/templates/educational-material-add.html
@@ -385,9 +385,9 @@
               <!-- Breadcrumbs -->
               <div class="col-md-4 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span>
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/educational-material">Edu Material</a></span>
+                  <span><a ui-sref="educational-material">Edu Material</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
                   <span><strong>Add Educational Material</strong></span>
                 </span>
