--- a/templates/email-add.html
+++ b/templates/email-add.html
@@ -140,9 +140,9 @@
               <!-- Breadcrumbs -->
               <div class="col-md-4 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span>
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/email">Email</a></span>
+                  <span><a ui-sref="email">Email</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
                   <span><strong>Add Email Template</strong></span>
                 </span>
