--- a/templates/hospital-map-add.html
+++ b/templates/hospital-map-add.html
@@ -129,9 +129,9 @@
               <!-- Breadcrumbs -->
               <div class="col-md-4 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span>
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/hospital-map">Hospital Maps</a></span>
+                  <span><a ui-sref="hospital-map">Hospital Maps</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
                   <span><strong>Add Hospital Map</strong></span>
                 </span>
