--- a/templates/legacy-questionnaire-add.html
+++ b/templates/legacy-questionnaire-add.html
@@ -275,9 +275,9 @@
               <!-- Breadcrumbs -->
               <div class="col-md-3 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span>
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/legacy-questionnaire">Legacy Questionnaires</a></span>
+                  <span><a ui-sref="legacy-questionnaire">Legacy Questionnaires</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
                   <span><strong>Add Legacy Questionnaire</strong></span>
                 </span>
