--- a/templates/notification-add.html
+++ b/templates/notification-add.html
@@ -121,9 +121,9 @@
               <!-- Breadcrumbs -->
               <div class="col-md-4 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span>
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/notification">Notifications</a></span>
+                  <span><a ui-sref="notification">Notifications</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
                   <span><strong>Add Notification</strong></span>
                 </span>
