--- a/templates/questionnaire-add.html
+++ b/templates/questionnaire-add.html
@@ -334,10 +334,10 @@
               <!-- Breadcrumbs -->
               <div class="col-md-6 title-breadcrumbs">
                 <span>
-                  <a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span>
-                  <a href="#/questionnaire">Questionnaires</a>
+                  <a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span>
+                  <a ui-sref="questionnaire-menu">Questionnaires</a>
                   <span class="glyphicon glyphicon-menu-right teflon"></span>
-                  <a href="#/questionnaire/manage">Manage</a>
+                  <a ui-sref="questionnaire">Manage</a>
                   <span class="glyphicon glyphicon-menu-right teflon"></span>
                   <strong>Add Questionnaire</strong>
                 </span>
