--- a/templates/side-panel-menu.html
+++ b/templates/side-panel-menu.html
@@ -138,7 +138,7 @@
                   <div style="height: 10px; border-bottom: 1px solid #6f5499;">
                     <span style="background-color:#e6edfa; padding: 0 10px;">
                       <span class="fa fa-dot-circle-o"></span>
-                      <h2>Adminstration</h2>
+                      <h2>Administration</h2>
                     </span>  
                   </div>  
                 </div>
