--- a/templates/legacy-questionnaire.html
+++ b/templates/legacy-questionnaire.html
@@ -16,7 +16,7 @@
 						</div>
             <!-- Breadcrumbs -->
 						<div class="col-md-6 title-breadcrumbs">
-							<a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/legacy-questionnaire">Legacy Questionnaires</a>							<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Manage Legacy Questionnaires</strong></span>
+							<a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/legacy-questionnaire">Legacy Questionnaires</a>							<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Manage Legacy Questionnaires</strong></span>
 						</div>
 					</div>
 					<div class="row clearfix" style="margin-bottom: 10px; display:flex; align-items: center">
