--- a/templates/patient-activity.html
+++ b/templates/patient-activity.html
@@ -16,7 +16,7 @@
               </div>
               <!-- Breadcrumbs -->
               <div class="col-md-4 title-breadcrumbs"> 
-                <span><a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Patient Activity</strong></span>
+                <span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Patient Activity</strong></span>
               </div>
             </div>  
             <!-- Load main table -->
