--- a/templates/post-add.html
+++ b/templates/post-add.html
@@ -287,9 +287,9 @@
               <!-- Breadcrumbs -->
               <div class="col-md-3 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span>
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/post">Posts</a></span>
+                  <span><a ui-sref="post">Posts</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
                   <span><strong>Add Post</strong></span>
                 </span>
