--- a/templates/questionnaire-completed.html
+++ b/templates/questionnaire-completed.html
@@ -17,7 +17,7 @@
             <!-- Breadcrumbs -->
 						<div class="col-md-6 title-breadcrumbs">
 							<span>
-								<a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/questionnaire">Questionnaire</a>	<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>View Completed Questionnaire</strong></span>
+								<a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaire</a>	<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>View Completed Questionnaire</strong></span>
 						</div>
 					</div>
 					<div class="none-to-display-container">
