--- a/templates/questionnaire-main-menu.html
+++ b/templates/questionnaire-main-menu.html
@@ -16,7 +16,7 @@
             </div>
             <!-- Breadcrumbs -->
             <div class="col-md-3 title-breadcrumbs"> 
-              <span><a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Questionnaires</strong></span>
+              <span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Questionnaires</strong></span>
             </div>
           </div> 
 
