--- a/templates/questionnaire-question-add.html
+++ b/templates/questionnaire-question-add.html
@@ -169,7 +169,7 @@
               <!-- Breadcrumbs -->
               <div class="col-md-6 title-breadcrumbs">
                 <span>
-                  <a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/questionnaire">Questionnaires</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/questionnaire/bank">Manage</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Add Question</strong></span>
+                  <a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaires</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-question">Manage</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Add Question</strong></span>
                 </div>
               </div>
 
