--- a/templates/questionnaire-question.html
+++ b/templates/questionnaire-question.html
@@ -16,7 +16,7 @@
 						</div>
             <!-- Breadcrumbs -->
 						<div class="col-md-3 title-breadcrumbs">
-							<span><a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a href="#/questionnaire">Questionnaire</a>	<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Manage Question Bank</strong></span>
+							<span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <a ui-sref="questionnaire-menu">Questionnaire</a>	<span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Manage Question Bank</strong></span>
 						</div>
 					</div>
 					<div class="row clearfix" style="margin-bottom: 10px; display:flex; align-items: center">
