--- a/templates/test-result-add.html
+++ b/templates/test-result-add.html
@@ -198,9 +198,9 @@
               <!-- Breadcrumbs -->
               <div class="col-md-4 title-breadcrumbs"> 
                 <span>
-                  <span><a href="#/">Home</a></span>
+                  <span><a ui-sref="home">Home</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
-                  <span><a href="#/test-result">Test Results</a></span>
+                  <span><a ui-sref="test-result">Test Results</a></span>
                   <span class="teflon glyphicon glyphicon-menu-right"></span> 
                   <span><strong>Add Test Result</strong></span>
                 </span>
