--- a/templates/test-result.html
+++ b/templates/test-result.html
@@ -16,7 +16,7 @@
               </div>
               <!-- Breadcrumbs -->
               <div class="col-md-4 title-breadcrumbs">
-                <span><a href="#/">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Test Results</strong></span>
+                <span><a ui-sref="home">Home</a> <span class="glyphicon glyphicon-menu-right teflon"></span> <strong>Test Results</strong></span>
               </div>
             </div>
 						<div class="row clearfix" style="margin-bottom: 10px;">
