--- a/templates/post.html
+++ b/templates/post.html
@@ -207,14 +207,14 @@
           <div uib-accordion-group is-open="statusPatientFilter.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusPatientFilter.open, 'glyphicon-chevron-right': !statusPatientFilter.open}"></i>
+                <strong>Filter By Patient </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusPatientFilter.open, 'glyphicon-chevron-right': !statusPatientFilter.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
               <h4>Current Patient Filters</h4>
               <ul class="list-items-4col">
                 <li ng-show="allFilters(patientFilterList)">
-                  All Patients
+                  No Filter
                 </li>  
                 <li ng-repeat="patient in patientFilterList | filter: {added: 1} : 1" ng-hide="allFilters(patientFilterList)">
                   {{patient.name}}
@@ -227,11 +227,6 @@
                 <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                 <input class="form-control" type="text" ng-model="patientSearchField" ng-change="searchPatient(patientSearchField)" placeholder="Search..."/>
               </div>
-              <div style="padding: 10px;">
-                <strong> 
-                  To select all, leave all boxes unchecked.
-                </strong>
-              </div>    
               <ul class="list-items">
                 <li ng-repeat="patient in patientFilterList | filter: searchPatientFilter">
                   <label>
@@ -242,24 +237,24 @@
             </div>
           </div>
 
-          <!-- SECTION: Expression filter -->
+          <!-- SECTION: Appointment/Task filter -->
           <div uib-accordion-group is-open="statusExpressionFilter.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter Terms </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusExpressionFilter.open, 'glyphicon-chevron-right': !statusExpressionFilter.open}"></i>
+                <strong>Filter By Appointment or Task Code</strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusExpressionFilter.open, 'glyphicon-chevron-right': !statusExpressionFilter.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
-              <h4>Current Terms</h4>
+              <h4>Current Filters</h4>
               <ul class="list-items-4col">
                 <li ng-show="allFilters(termList)">
-                  All Terms
+                  No Filter
                 </li>  
                 <li ng-repeat="selectedTerm in termList | filter: {added: 1} : 1" ng-hide="allFilters(termList)">
                   {{selectedTerm.name}}
                 </li>
               </ul>
-              <p>To add/remove term filter, use the list below.</p>
+              <p>To add/remove an activity code filter, use the list below.</p>
             </div>
             <div class="list-space">
               <div class="input-group">
@@ -285,31 +280,26 @@
           <div uib-accordion-group is-open="statusDiagnosisFilter.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter Diagnoses </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDiagnosisFilter.open, 'glyphicon-chevron-right': !statusDiagnosisFilter.open}"></i>
+                <strong>Filter By Diagnosis </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDiagnosisFilter.open, 'glyphicon-chevron-right': !statusDiagnosisFilter.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
               <h4>Current Diagnosis Filters</h4>
               <ul class="list-items-4col">
                 <li ng-show="allFilters(dxFilterList)">
-                  All Diagnoses
+                  No Filter
                 </li>  
                 <li ng-repeat="dx in dxFilterList | filter: {added: 1} : 1" ng-hide="allFilters(dxFilterList)">
                   {{dx.name}}
                 </li>
               </ul>
-              <p>To add/remove diagnosis filter, use the list below.</p>
+              <p>To add/remove a diagnosis filter, use the list below.</p>
             </div>
             <div class="list-space">
               <div class="input-group">
                 <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                 <input class="form-control" type="text" ng-model="dxSearchField" ng-change="searchDiagnosis(dxSearchField)" placeholder="Search..."/>
               </div>
-              <div style="padding: 10px;">
-                <strong> 
-                  To select all, leave all boxes unchecked.
-                </strong>
-              </div>    
               <ul class="list-items">
                 <li ng-repeat="dx in dxFilterList | filter: searchDxFilter">
                   <label>
@@ -324,31 +314,26 @@
           <div uib-accordion-group is-open="statusDoctorFilter.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter Doctors </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDoctorFilter.open, 'glyphicon-chevron-right': !statusDoctorFilter.open}"></i>
+                <strong>Filter By Doctor </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusDoctorFilter.open, 'glyphicon-chevron-right': !statusDoctorFilter.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
               <h4>Current Doctor Filters</h4>
               <ul class="list-items-4col">
                 <li ng-show="allFilters(doctorFilterList)">
-                  All Doctors
+                  No Filter
                 </li>  
                 <li ng-repeat="doctor in doctorFilterList | filter: {added: 1} : 1" ng-hide="allFilters(doctorFilterList)">
                   {{doctor.name}}
                 </li>
               </ul>
-              <p>To add/remove doctors, use the list below.</p>
+              <p>To add/remove a doctor, use the list below.</p>
             </div>
             <div class="list-space">
               <div class="input-group">
                 <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                 <input class="form-control" type="text" ng-model="doctorSearchField" ng-change="searchDoctor(doctorSearchField)" placeholder="Search..."/>
               </div>
-              <div style="padding: 10px;">
-                <strong> 
-                  To select all, leave all boxes unchecked.
-                </strong>
-              </div>    
               <ul class="list-items">
                 <li ng-repeat="doctor in doctorFilterList | filter: searchDoctorFilter">
                   <label>
@@ -363,31 +348,26 @@
           <div uib-accordion-group is-open="statusResourceFilter.open">
             <uib-accordion-heading>
               <div>
-                <strong>Filter Resources </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusResourceFilter.open, 'glyphicon-chevron-right': !statusResourceFilter.open}"></i>
+                <strong>Filter By Treatment Machine </strong><i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': statusResourceFilter.open, 'glyphicon-chevron-right': !statusResourceFilter.open}"></i>
               </div>
             </uib-accordion-heading>
             <div class="bs-callout bs-callout-info">
               <h4>Current Resource Filters</h4>
               <ul class="list-items-4col">
                 <li ng-show="allFilters(resourceFilterList)">
-                  All Resources
+                  No Filter
                 </li>  
                 <li ng-repeat="resource in resourceFilterList | filter: {added: 1} : 1" ng-hide="allFilters(resourceFilterList)">
                   {{resource.name}}
                 </li>
               </ul>
-              <p>To add/remove resources, use the list below.</p>
+              <p>To add/remove a machine, use the list below.</p>
             </div>
             <div class="list-space">
               <div class="input-group">
                 <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
                 <input class="form-control" type="text" ng-model="resourceSearchField" ng-change="searchResource(resourceSearchField)" placeholder="Search..."/>
               </div>
-              <div style="padding: 10px;">
-                <strong> 
-                  To select all, leave all boxes unchecked.
-                </strong>
-              </div>    
               <ul class="list-items">
                 <li ng-repeat="resource in resourceFilterList | filter: searchResourceFilter">
                   <label>
