--- Added display for assigned diagnoses         -- Diagnoses assigned to another translation will show up as gray and disabled         with information on which translation the diagnosis is assigned to         -- Selected diagnoses are in green     --- Added tabs to filter assigned diagnoses

--- a/css/style.css
+++ b/css/style.css
@@ -957,6 +957,18 @@ ul.no-list {
   color: #433061;
 }
 
+.greenText {
+  color: #5cb85c;
+}
+
+.redText {
+  color: #a94442;
+}
+
+.grayText {
+  color: #777;
+}
+
 /*.grid-disabled-row .ui-grid-cell-contents{
   background-color: #a5a5a5 !important;
 }*/
