--- a/templates/diagnosis-translation-add.html
+++ b/templates/diagnosis-translation-add.html
@@ -71,7 +71,7 @@
 								<div ng-if="checkDiagnosesAdded(diagnosisList)" class="description">
 									<p style="margin-top: 5px;">
 										<ul style="max-height: 100px; overflow-y: auto;">
-											<li ng-repeat="diagnosis in diagnosisList | filter: {added: 1} : 1">
+											<li ng-repeat="diagnosis in diagnosisList | filter: {added: 1, assigned: null} ">
 												{{diagnosis.name}}
 											</li>
 										</ul>
@@ -227,10 +227,16 @@
                         <input type="checkbox" ng-click="selectAllFilteredDiagnoses()"> Select All
                       </label>
                     </div>
+										<div class="btn-group btn-group-justified">
+										  <a class="btn btn-default" ng-class="{'active' : !showAssigned && !hideAssigned}" ng-click="showAssigned = false; hideAssigned = false">Show all</a>
+										  <a class="btn btn-default" ng-class="{'active' : showAssigned}" ng-click="showAssigned = true; hideAssigned = false">Only show assigned</a>
+										  <a class="btn btn-default" ng-class="{'active' : hideAssigned}" ng-click="showAssigned = false; hideAssigned = true">Only show unassigned</a>
+										</div>
 										<ul class="list-items">
 											<li ng-repeat="diagnosis in diagnosisList | filter: searchDiagnosesFilter">
-												<label>
-													<input type="checkbox" ng-click="toggleDiagnosisSelection(diagnosis)" ng-checked="diagnosis.added" /> {{diagnosis.name}}
+												<label ng-class="{greenText: diagnosis.added, grayText: diagnosis.assigned}">
+													<input type="checkbox" ng-click="toggleDiagnosisSelection(diagnosis)" ng-checked="diagnosis.added" ng-disabled="diagnosis.assigned" /> {{diagnosis.name}} 
+													<span ng-class="{redText: diagnosis.assigned}" ng-if="diagnosis.assigned"><em> --- Assigned to: {{diagnosis.assigned.name_EN}}</em></span>
 												</label>
 											</li>
 										</ul>
